--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flink.version>2.0.1</flink.version>
+        <flink.version>1.20.3</flink.version>
         <java.version>17</java.version>
     </properties>
 
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka</artifactId>
-            <version>4.0.0-2.0</version>
+            <version>3.4.0-1.20</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -53,17 +53,21 @@
             <version>${flink.version}</version>
             <scope>provided</scope>
         </dependency><!-- Source: https://mvnrepository.com/artifact/org.apache.iceberg/iceberg-flink-runtime-2.0 -->
+
         <dependency>
             <groupId>org.apache.iceberg</groupId>
-            <artifactId>iceberg-flink-runtime-2.0</artifactId>
+            <artifactId>iceberg-flink-runtime-1.20</artifactId>
             <version>1.10.0</version>
+            <scope>provided</scope>
         </dependency>
         <!-- Source: https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>2.8.3</version>
+            <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-planner-loader</artifactId>
